# arbor

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
example/shaders/: basic.frag  basic.vert
include/arbor/: application.hpp  configs.hpp  engine.hpp  input_manager.hpp  logger_utils.hpp  model.hpp  types.hpp  window.hpp
include/arbor/assets/: library.hpp  material.hpp  model.hpp  texture.hpp
include/arbor/components/: component.hpp  components.hpp  renderer.hpp
include/arbor/scene/: asset_library.hpp  asset_manager.hpp  camera.hpp  controls.hpp  object.hpp  scene.hpp  texture.hpp
include/engine/: application.hpp  engine.hpp  model.hpp
include/engine/components/: component.hpp  components.hpp  renderer.hpp
include/engine/scene/: object.hpp  scene.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  arbor.cppm  arbor.hpp  component.cpp  engine.cpp  input_manager.cpp  logger_utils.cpp  main.cpp  model_generators.cpp  types.cppm  vertex_bindings.cpp  window.cpp
src/assets/: material.cpp  model_generators.cpp  texture.cpp
src/engine/: application.cppm  application.hpp  engine.cppm  engine.hpp  logger.cppm  logger_utils.hpp  model.hpp  window.cppm  window.hpp
src/engine/components/: component.hpp  components.cppm  components.hpp  renderer.cppm  renderer.hpp
src/engine/impl/: component.cpp  engine.cpp  logger_utils.cpp  renderer.cpp  vertex_bindings.cpp  window.cpp
src/engine/impl/renderer/: pipeline.cpp  renderer.cpp  shader.cpp
src/engine/impl/renderer/vulkan/: command_pool.cpp  device.cpp  device_buffer.cpp  instance.cpp  pipeline.cpp  swapchain.cpp  sync.cpp  vertex_buffer.cpp
src/renderer/: gui.cpp  renderer.cpp  shader.cpp
src/renderer/vulkan/: assets.cpp  command_pool.cpp  descriptor_pool.cpp  device.cpp  device_buffer.cpp  helpers.cpp  instance.cpp  pipeline.cpp  swapchain.cpp  sync.cpp
src/scene/: camera.cpp  controls.cpp  scene.cpp  texture.cpp
src/shaders/: basic.frag  basic.vert
